--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!--Custom-->
-  <string name="app_name">Linphone</string>
-  <string name="service_name">Служба Linphone</string>
+  <string name="app_name">VICPhone</string>
+  <string name="service_name">Служба VICPhone</string>
   <string name="addressbook_label">Linphone</string>
-  <string name="notification_title">Linphone</string>
+  <string name="notification_title">VICPhone</string>
   <string name="wait_dialog_text">Загружается</string>
   <string name="notification_registered">%s соединено</string>
   <string name="notification_register_failure">%s соединиться не удалось</string>
